[Fix] footerのz-indexの指定は不要だったので削除．

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -145,7 +145,6 @@ footer {
   position: absolute;
   right: 0;
   left: 0;
-  z-index: 100;
   padding: 40px;
   font-size: 0.8rem;
 
